# fiberlabs-edfa

./: .gitignore  README.md  pyproject.toml
src/edfa-controller/: __init__.py  edfa_controller.py
src/fiberlabs-edfa/: edfa_idn_simple.py
src/fiberlabs_edfa/: edfa_controller.py  edfa_idn_simple.py  gui.py
