[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "edfa-controller"
version = "1.0.0"
description = "Python controller for FiberLabs Desktop Optical Fibre Amplifier via RS232"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Kok-Wei Bong", email = "your.email@example.com"}
]
keywords = ["EDFA", "optical amplifier", "RS232", "FiberLabs", "instrumentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

dependencies = [
    "pyserial>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/bongkokwei/edfa-controller"
Documentation = "https://github.com/bongkokwei/edfa-controller#readme"
Repository = "https://github.com/bongkokwei/edfa-controller"
"Bug Tracker" = "https://github.com/bongkokwei/edfa-controller/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["edfa-controller"]

[tool.setuptools.package-data]
edfa_controller = ["*.md", "*.pdf"]