[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edfa-controller"
version = "1.0.0"
description = "Python controller for FiberLabs Desktop Optical Fibre Amplifier via RS232"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Your Name"}
]
dependencies = [
    "pyserial>=3.4",
]

[project.urls]
Repository = "https://github.com/yourusername/edfa-controller"